# advent

./: .gitignore  Cargo.toml  flake.nix  justfile
.config/: hakari.toml
advent-hack/: Cargo.toml
advent_core/: Cargo.toml
advent_core/src/: bootstrap.rs  day.rs  lib.rs  parser.rs  year.rs
core/: Cargo.toml
core/src/: bootstrap.rs  day.rs  lib.rs  parser.rs  year.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: main.rs
utils/: Cargo.toml
utils/src/: day_utils.rs  dir.rs  geom.rs  grid.rs  lib.rs  line.rs  misc.rs  num.rs  pos.rs  range.rs
years/2023/: Cargo.toml
years/2023/src/: day_1.rs  day_11.rs  day_12.rs  day_17.rs  day_20.rs  day_22.rs  day_23.rs  day_25.rs  day_3.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  lib.rs  main.rs
years/2024/: Cargo.toml
years/2024/src/: da_tree.txt  day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_2.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  lib.rs  main.rs
years/2025/: Cargo.toml
years/2025/src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  lib.rs  main.rs
years/2025/src/examples/day_12/: 1.txt
