[package]
name = "advent"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "core",
    "macros",
    "utils",
    "years/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
y_2024 = { path = "years/2024" }
core = { path = "core" }
macros = { path = "macros" }

[[bin]]
name = "advent"
path = "src/main.rs"
