[package]
name = "advent"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "advent_core",
    "macros",
    "utils",
    "years/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
y_2025 = { path = "years/2025" }
y_2024 = { path = "years/2024" }
advent_core = { path = "advent_core" }
macros = { path = "macros" }

[[bin]]
name = "advent"
path = "src/main.rs"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
